refactored maintenance tasks and created removed ldap users task

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,7 +74,8 @@ en:
       index:
         title: "Maintenance tasks"
         maintenance_task: "Maintenance tasks"
-        run: "execute"
+        prepare: "prepare"
+        execute: "execute"
     settings:
       index:
         title: "Edit Settings"
@@ -196,6 +197,10 @@ en:
           toggle:
             empowered: "%{username} is now an admin"
             disempowered: "%{username} is no more admin"
+          destroy:
+            own_user: "You can't delete your-self"
+            success: "Deleted user %{username}"
+          no_access: "Access denied"
       members:
         removed: "%{username} was successfully removed from team"
         added: "%{username} was successfully added to team"
@@ -217,7 +222,6 @@ en:
       users:
         created: "Successfully created a new user."
         destroy:
-          own_user: "You can't delete your-self"
           root: "Root cannot be deleted"
         update:
           root: "Root cannot be updated"
@@ -225,6 +229,8 @@ en:
       maintenance_tasks:
         succeed: "Task was executed successfully."
         failed: "Task failed. See logs for more information."
+        ldap_connection:
+          failed: "No configured Ldap Server could be reached."
 
     accounts:
       created: "Account was successfully created."
