--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -196,6 +196,9 @@ de:
           toggle:
             empowered: "%{username} hat nun Admin-Rechte"
             disempowered: "Dem Benutzer %{username} wurden die Admin-Rechte entzogen"
+          destroy:
+            own_user: "Eigener Benutzer kann nicht gelöscht werden"
+          no_access: "Zugriff verweigert"
       members:
         added: "%{username} wurde erfolgreich hinzugefügt"
         removed: "%{username} wurde erfolgreich entfernt"
@@ -217,7 +220,6 @@ de:
       users:
         created: "Der neue Benutzer wurde erfolgreich erstellt."
         destroy:
-          own_user: "Eigener Benutzer kann nicht gelöscht werden"
           root: "Root kann nicht gelöscht werden"
         update:
           root: "Root kann nicht aktualisiert werden"
@@ -225,6 +227,8 @@ de:
       maintenance_tasks:
         succeed: "Wartungsaufgabe wurde erfolgreich durchgeführt"
         failed: "Wartungsaufgabe ist gescheitert. Siehe Logs für mehr Details."
+        ldap_connection:
+          failed: "Kein konfigurierter Ldap-Server konnte erreicht werden."
 
     accounts:
       created: "Der neue Account wurde erfolgreich erstellt."
